second model alive

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,9 @@
 				<li>
 					<a href="/teams">Teams</a>
 				</li>
+                 <li>
+					<a href="/players">Players</a>
+				</li>
 			</ul>
 		</nav>
 	</header>
