create a new page

--- a/views/players/index.ejs
+++ b/views/players/index.ejs
@@ -13,7 +13,7 @@
             <a href="/">Home</a>
           </li>
           <li>
-            <a href="/teams/new">Create a new Player</a>
+            <a href="/players/new">Create a new Player</a>
           </li>
         </ul>
       </nav>
